--- a/Donut-on-Demand/pom.xml
+++ b/Donut-on-Demand/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>tomcat-jasper</artifactId>
             <version>9.0.41</version> 
         </dependency>
+        <dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>5.2.2.RELEASE</version>
+		</dependency>
 		<dependency>
 		    <groupId>com.fasterxml.jackson.dataformat</groupId>
 		    <artifactId>jackson-dataformat-xml</artifactId>
