--- a/Donut-on-Demand/src/main/resources/application.properties
+++ b/Donut-on-Demand/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:donutondemand
+spring.datasource.url= jdbc:postgresql://localhost:5432/donuttc?useSSL=false
 
+spring.datasource.username=titouan1
+spring.datasource.password=titouan
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 spring.mail.username=5edc5eb499e274
 spring.mail.password=b6626145eb9a7f
+
