--- a/Donut-on-Demand/src/main/resources/application.properties
+++ b/Donut-on-Demand/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
