--- a/Donut-on-Demand/pom.xml
+++ b/Donut-on-Demand/pom.xml
@@ -97,6 +97,11 @@
 		    <artifactId>jstl</artifactId>
 		    <version>1.2</version> 
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+		    <version>2.2.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
